--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,7 +53,10 @@ nav {
 // -------------
 
 .Footer {
-    position: absolute;
+    position: fixed;
+    clear: both;
+    margin-top: -400px;
+    height: 50px;
     left: 0;
     right: 0;    
     bottom: 0;
@@ -63,6 +66,7 @@ nav {
     background-color: black;
 }    
 
+
 footer {
     padding: 1%;
     text-decoration: none;
@@ -70,5 +74,5 @@ footer {
 
 a:visited { 
     text-decoration: none; 
-    color: black; 
+    color: white; 
    }
